objects/vlocity_ins__FinancialStatementLineItem__c.object
<CustomObject>
    <description>A source of income, expense, asset, liability, or other financial consideration reported on a financial statement. A financial statement line item spec can be defined and associated to enable capture of Vlocity Attributes. Master-detail child of Financial Statement.</description>
    <fields>
        <fullName>vlocity_ins__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FinancialStatementId__c</fullName>
        <label>Financial Statement</label>
        <referenceTo>vlocity_ins__FinancialStatement__c</referenceTo>
        <relationshipLabel>Financial Statement Line Items</relationshipLabel>
        <relationshipName>FinancialStatementLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Item Spec</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Financial Statement Line Items</relationshipLabel>
        <relationshipName>FinancialStatementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Financial Statement Line Item</label>
    <nameField>
        <label>Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Statement Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>